[gd_scene load_steps=3 format=3 uid="uid://kmeoatunxi6i"]

[ext_resource type="PackedScene" uid="uid://nio4gkoinqbu" path="res://src/scenes/foe.tscn" id="1_eivsv"]
[ext_resource type="Script" path="res://src/Scripts/boss.gd" id="2_kvuit"]

[node name="Boss" instance=ExtResource("1_eivsv")]
script = ExtResource("2_kvuit")
shot_type = null
bullet_speed = null
spawn_dist_from_foe = null
foe_shot_pattern = null
foe_shot_pattern2 = null
foe_shot_pattern3 = null
spiral_spread = null
circle_density = null
inv_fan_density = null
shot_movement_type = null
shoot_timer = null
health = null
SPEED = null
side_exit = null
pathing_type = null
hovered = null
hover_time = null
movement_state = null

[node name="SpellCardTimer" type="Timer" parent="." index="1"]
wait_time = 10.0
autostart = true

[node name="HealthBar" type="ProgressBar" parent="." index="2"]
offset_left = -63.0
offset_top = 78.0
offset_right = 63.0
offset_bottom = 105.0
scale = Vector2(1, 1.071)
max_value = 1500.0
step = 1.0
fill_mode = 1
show_percentage = false

[node name="TimeoutTimer" type="Timer" parent="." index="3"]
wait_time = 90.0
autostart = true

[node name="MoveTimer" type="Timer" parent="." index="4"]
wait_time = 3.0

[node name="Foe" parent="." index="6"]
scale = Vector2(5, 5)

[connection signal="timeout" from="SpellCardTimer" to="." method="_on_spell_card_timer_timeout"]
[connection signal="timeout" from="TimeoutTimer" to="." method="_on_timeout_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
